--- a/style/style.css
+++ b/style/style.css
@@ -18,12 +18,14 @@
 .header {
     width: 100%;
     height: 120px;
-    margin: 0 auto;
 
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
 }
+
+
+
 .header_logo {
     height: 60px;
     width: 184px;
@@ -86,6 +88,9 @@
     color: rgba(250, 250, 250, 1);
     border-bottom: 3px solid rgba(241, 205, 179, 1);
 }
+
+
+
 .start_screen-content {
     width: 100%;
     height: 728px;
@@ -806,4 +811,177 @@
     background-position: center center;
     margin-right: 40px;
     margin-top: 3%;
+}
+/***********************/
+.header-our-pets{
+    width: 100%;
+    height: 120px;
+    background: rgba(255, 255, 255, 1);
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header_logo-our-pets {
+    height: 60px;
+    width: 184px;
+    text-align: center;
+    margin-left: 30px;
+}
+.logo_title-our-pets {
+    font-family: Georgia;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35px;
+    color:  rgba(84, 84, 84, 1);
+    margin: 0;
+}
+.logo_subtitle-our-pets {
+    font-family: Arial;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.1em;
+    color: rgba(41, 41, 41, 1);
+
+}
+.header_menu-our-pets {
+
+}
+.nav__menu-our-pets {
+    height: 27px;
+    width: 443px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 0;
+    margin-right: 40px;
+}
+.link-1-our-pets {
+    width: 114px;
+}
+.link-2-our-pets {
+    width: 58px;
+}
+.link-3-our-pets {
+    width: 106px;
+}
+.link-4-our-pets {
+    width: 60px;
+}
+.paragraph-l__link-our-pets {
+    font-family: Arial;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    color:  rgba(84, 84, 84, 1);
+
+    text-decoration: none;
+    border-bottom: 3px solid rgba(0, 0, 0, 0);
+    transition: border-bottom .5s;
+}
+
+.paragraph-l__link-our-pets:hover {
+    color: rgba(41, 41, 41, 1);
+}
+
+.paragraph-l__link-our-pets :active{
+    border-bottom: 3px solid rgba(241, 205, 179, 1);
+
+}
+
+
+
+
+.section_our-pets{
+    width: 100%;
+    height: 1342px;
+    position: relative;
+
+}
+.box-heading__our-pets{
+    width: 100%;
+    height: 16%;
+    position: relative;
+}
+.pets__heading-our-pets {
+    width: 400px;
+    height: 90px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 80px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.cards-container_our-pets{
+
+    width: 100%;
+    min-height: 930px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+.pets-sophia {
+    width: 100%;
+    height: 270px;
+    background-image: url(../img/pets_card/pets-sophia.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin: 0;
+}
+.pets-timmy {
+    width: 100%;
+    height: 270px;
+    background-image: url(../img/pets_card/pets-timmy.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin: 0;
+}
+.pets-charly {
+    width: 100%;
+    height: 270px;
+    background-image: url(../img/pets_card/pets-charly.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin: 0;
+}
+.pets-scarlet{
+    width: 100%;
+    height: 270px;
+    background-image: url(../img/pets_card/pets-scarlet.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin: 0;
+}
+.pets-freddie {
+    width: 100%;
+    height: 270px;
+    background-image: url(../img/pets_card/pets-freddie.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin: 0;
+}
+.navigation{
+    border: 1px solid #000;
+    width: 340px;
+    height: 52px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom:100px;
+    margin: 0 auto;
 }
