--- a/style/style.css
+++ b/style/style.css
@@ -1013,37 +1013,30 @@
     color: rgba(41, 41, 41, 1);
 }
 
-.section_our-pets {
+.our-pets {
     width: 100%;
     height: 1342px;
     position: relative;
     background: rgba(246, 246, 246, 1);
 }
 
-.box-heading__our-pets {
+.our-pets__heading {
     width: 100%;
     height: 16%;
-    position: relative;
-}
-
-.box-heading__our-pet-wrapper {
-    width: 400px;
-    height: 90px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100px;
-    margin: 0 auto;
-    display: flex;
+display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+
 }
+
+
 
 .pets__heading-text {
     margin: 0;
 }
 
-.cards-container_our-pets {
+.cards {
 
     width: 100%;
     min-height: 930px;
